[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.1"
# either = "1"
gumdrop = { version = "0.8.0", features = ["default_expr"] }
mpl-token-metadata = "1"
reqwest = "0.11.7"
rusqlite = "0.26.0"
serde = "1"
serde_json = "1"
solana-client = "1"
solana-sdk = "1"
tokio = { version = "1", features = ["full"] }